--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/input.css">
 </head>
 <body>
-   <div class="container">
+   <div class="container-fluid">
     <div class="sidenav">
         <div class="topnav">
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1200px-Hamburger_icon.svg.png" alt="">
