--- a/index.html
+++ b/index.html
@@ -7,13 +7,33 @@
     <link rel="stylesheet" href="style/input.css">
 </head>
 <body>
-   <div class="container-fluid">
+   <div class="">
     <div class="sidenav">
         <div class="topnav">
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1200px-Hamburger_icon.svg.png" alt="">
           <h2>sidebar</h2> 
         </div>
         <div>
+        <a href="#">How To</a>
+        <a href="#">Menus</a>
+        <a href="#">Images</a>
+        <a href="#">Buttons</a>
+        <a href="#">Forms</a>
+        <a href="#">How To</a>
+        <a href="#">Menus</a>
+        <a href="#">Images</a>
+        <a href="#">Buttons</a>
+        <a href="#">Forms</a>
+        <a href="#">How To</a>
+        <a href="#">Menus</a>
+        <a href="#">Images</a>
+        <a href="#">Buttons</a>
+        <a href="#">Forms</a>
+        <a href="#">How To</a>
+        <a href="#">Menus</a>
+        <a href="#">Images</a>
+        <a href="#">Buttons</a>
+        <a href="#">Forms</a>
         <a href="#">How To</a>
         <a href="#">Menus</a>
         <a href="#">Images</a>
