--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
      <!-- Content -->
-     <div class="content" id="mainnav">
+     <div class="content" >
             <h2> Main Content</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sint similique ipsum eum blanditiis possimus tenetur debitis minus. 
                 Consectetur omnis officiis, molestiae aperiam ipsam alias voluptatem dolorum modi vel maiores.
@@ -69,7 +69,18 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sint similique ipsum eum blanditiis possimus tenetur debitis minus. 
                 Consectetur omnis officiis, molestiae aperiam ipsam alias voluptatem dolorum modi vel maiores.
             </p>
-            
+            <h2> Main Content</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sint similique ipsum eum blanditiis possimus tenetur debitis minus. 
+                Consectetur omnis officiis, molestiae aperiam ipsam alias voluptatem dolorum modi vel maiores.
+            </p>
+            <h2> Main Content</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sint similique ipsum eum blanditiis possimus tenetur debitis minus. 
+                Consectetur omnis officiis, molestiae aperiam ipsam alias voluptatem dolorum modi vel maiores.
+            </p>
+            <h2> Main Content</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sint similique ipsum eum blanditiis possimus tenetur debitis minus. 
+                Consectetur omnis officiis, molestiae aperiam ipsam alias voluptatem dolorum modi vel maiores.
+            </p>
     </div>
 
 <!-- footer -->
